--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             display: flex;
             flex-direction: column;
             overflow: hidden;
+            position: relative;
         }
 
         .header {
@@ -412,6 +413,33 @@
             opacity: 0.5;
         }
 
+        /* Sparkline canvas */
+        .sparkline {
+            width: 80px;
+            height: 24px;
+        }
+
+        .ticker-right {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .alert-row {
+            background-color: rgba(251, 191, 36, 0.08);
+            border-color: rgba(251, 191, 36, 0.5);
+        }
+
+        .alert-badge {
+            font-size: 10px;
+            text-transform: uppercase;
+            padding: 2px 6px;
+            border-radius: 999px;
+            background-color: rgba(251, 191, 36, 0.2);
+            color: var(--color-warning);
+            font-weight: 600;
+        }
+
         ::-webkit-scrollbar {
             width: 8px;
             height: 8px;
@@ -532,11 +560,22 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Details Panel -->
+            <div class="panel" id="panel-details" style="display:none; position:absolute; top:80px; right:24px; width:340px; max-height:80vh; z-index:10;">
+                <div class="panel-header">
+                    <h2 id="detailsTitle">Stock Details</h2>
+                </div>
+                <div class="panel-body" id="detailsBody">
+                    <div style="font-size:13px; color:var(--color-text-secondary); margin-bottom:8px;">
+                        Click a stock in the watchlist to view details.
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <script>
-        // Sample static data (indices, news, sectors)
         const sampleIndices = [
             { symbol: 'SPX', name: 'S&P 500', price: 5832.41, change: 45.23, percent: 0.78 },
             { symbol: 'INDU', name: 'Dow Jones', price: 42156.34, change: 234.12, percent: 0.56 },
@@ -563,11 +602,12 @@
             { name: 'Materials', change: -0.34 }
         ];
 
-        // YOUR FINNHUB KEY (will be visible if repo is public)
         const FINNHUB_API_KEY = 'd5eaap9r01qjckl2rtg0d5eaap9r01qjckl2rtgg';
+        const ALERT_THRESHOLD = 2;
 
         let watchlist = [];
         let currentView = 'watchlist';
+        const candleCache = {};
 
         function init() {
             renderIndices();
@@ -661,12 +701,56 @@
                 return {
                     price: data.c,
                     change: data.d ?? 0,
-                    percent: data.dp ?? 0
+                    percent: data.dp ?? 0,
+                    high: data.h ?? null,
+                    low: data.l ?? null,
+                    open: data.o ?? null,
+                    prevClose: data.pc ?? null
                 };
             } catch (err) {
                 console.error('Finnhub error for', symbol, err);
                 return null;
             }
+        }
+
+        async function fetchIntradayCandles(symbol) {
+            try {
+                const now = Math.floor(Date.now() / 1000);
+                const from = now - 6 * 60 * 60;
+                const url = `https://finnhub.io/api/v1/stock/candle?symbol=${encodeURIComponent(symbol)}&resolution=5&from=${from}&to=${now}&token=${FINNHUB_API_KEY}`;
+                const res = await fetch(url);
+                if (!res.ok) throw new Error(`Candle API error: ${res.status}`);
+                const data = await res.json();
+                if (data.s !== 'ok' || !Array.isArray(data.c) || data.c.length === 0) return null;
+                return data.c;
+            } catch (err) {
+                console.error('Candle error for', symbol, err);
+                return null;
+            }
+        }
+
+        function drawSparkline(canvas, prices) {
+            if (!canvas || !prices || prices.length < 2) return;
+            const ctx = canvas.getContext('2d');
+            const w = canvas.width;
+            const h = canvas.height;
+            ctx.clearRect(0, 0, w, h);
+
+            const min = Math.min(...prices);
+            const max = Math.max(...prices);
+            const span = max - min || 1;
+
+            ctx.beginPath();
+            ctx.lineWidth = 1.5;
+            ctx.strokeStyle = prices[prices.length - 1] >= prices[0] ? '#22c55e' : '#ff6b6b';
+
+            prices.forEach((p, i) => {
+                const x = (i / (prices.length - 1)) * (w - 4) + 2;
+                const y = h - ((p - min) / span) * (h - 4) - 2;
+                if (i === 0) ctx.moveTo(x, y);
+                else ctx.lineTo(x, y);
+            });
+            ctx.stroke();
         }
 
         async function addToWatchlist() {
@@ -731,25 +815,159 @@
                     '<div class="empty-state"><div class="empty-state-icon">📋</div><p>No stocks in watchlist. Add one above.</p></div>';
                 return;
             }
-            container.innerHTML = watchlist.map(stock => `
-                <div class="ticker-card">
-                    <div class="ticker-header">
-                        <span class="ticker-symbol">${stock.symbol}</span>
-                        <span class="ticker-price ${parseFloat(stock.change) >= 0 ? 'up' : 'down'}">$${stock.price}</span>
-                    </div>
-                    <div class="ticker-change">
-                        <span>
-                            <span class="change-value ${parseFloat(stock.change) >= 0 ? 'up' : 'down'}">
-                                ${parseFloat(stock.change) >= 0 ? '+' : ''}${stock.change}
+
+            container.innerHTML = watchlist.map(stock => {
+                const changeNum = parseFloat(stock.change);
+                const percentNum = parseFloat(stock.percent);
+                const isUp = changeNum >= 0;
+                const alert = Math.abs(percentNum) >= ALERT_THRESHOLD;
+
+                return `
+                    <div class="ticker-card ${alert ? 'alert-row' : ''}" onclick="showDetails('${stock.symbol}')">
+                        <div class="ticker-header">
+                            <span class="ticker-symbol">${stock.symbol}</span>
+                            <span class="ticker-price ${isUp ? 'up' : 'down'}">$${stock.price}</span>
+                        </div>
+                        <div class="ticker-change">
+                            <span>
+                                <span class="change-value ${isUp ? 'up' : 'down'}">
+                                    ${isUp ? '+' : ''}${stock.change}
+                                </span>
+                                <span class="change-percent">
+                                    (${percentNum >= 0 ? '+' : ''}${stock.percent}%)
+                                </span>
+                                ${alert ? `<span class="alert-badge">Alert ${percentNum.toFixed(1)}%</span>` : ''}
                             </span>
-                            <span class="change-percent">
-                                (${parseFloat(stock.percent) >= 0 ? '+' : ''}${stock.percent}%)
+                            <span class="ticker-right" onclick="event.stopPropagation();">
+                                <canvas class="sparkline" id="spark-${stock.symbol}"></canvas>
+                                <button class="btn-danger" onclick="removeFromWatchlist('${stock.symbol}')">Remove</button>
                             </span>
-                        </span>
-                        <button class="btn-danger" onclick="removeFromWatchlist('${stock.symbol}')">Remove</button>
+                        </div>
                     </div>
-                </div>
-            `).join('');
+                `;
+            }).join('');
+
+            watchlist.forEach(async stock => {
+                const canvas = document.getElementById(`spark-${stock.symbol}`);
+                if (!canvas) return;
+                canvas.width = 80;
+                canvas.height = 24;
+
+                if (candleCache[stock.symbol]) {
+                    drawSparkline(canvas, candleCache[stock.symbol]);
+                } else {
+                    const prices = await fetchIntradayCandles(stock.symbol);
+                    if (prices) {
+                        candleCache[stock.symbol] = prices;
+                        drawSparkline(canvas, prices);
+                    }
+                }
+            });
+        }
+
+        async function fetchCompanyProfile(symbol) {
+            try {
+                const url = `https://finnhub.io/api/v1/stock/profile2?symbol=${encodeURIComponent(symbol)}&token=${FINNHUB_API_KEY}`;
+                const res = await fetch(url);
+                if (!res.ok) throw new Error(`Profile error: ${res.status}`);
+                const data = await res.json();
+                if (!data || Object.keys(data).length === 0) return null;
+                return data;
+            } catch (err) {
+                console.error('Profile error for', symbol, err);
+                return null;
+            }
+        }
+
+        async function fetchCompanyNews(symbol) {
+            try {
+                const today = new Date();
+                const fromDate = new Date(today.getTime() - 7 * 24 * 60 * 60 * 1000);
+                const fmt = d => d.toISOString().slice(0, 10);
+                const url = `https://finnhub.io/api/v1/company-news?symbol=${encodeURIComponent(symbol)}&from=${fmt(fromDate)}&to=${fmt(today)}&token=${FINNHUB_API_KEY}`;
+                const res = await fetch(url);
+                if (!res.ok) throw new Error(`News error: ${res.status}`);
+                const data = await res.json();
+                if (!Array.isArray(data)) return [];
+                return data.slice(0, 5);
+            } catch (err) {
+                console.error('News error for', symbol, err);
+                return [];
+            }
+        }
+
+        async function showDetails(symbol) {
+            const panel = document.getElementById('panel-details');
+            const title = document.getElementById('detailsTitle');
+            const body = document.getElementById('detailsBody');
+
+            panel.style.display = 'block';
+            title.textContent = `${symbol} – Details`;
+            body.innerHTML = `<div style="font-size:13px; color:var(--color-text-secondary);">Loading...</div>`;
+
+            const [profile, quote, news] = await Promise.all([
+                fetchCompanyProfile(symbol),
+                fetchRealPrice(symbol),
+                fetchCompanyNews(symbol)
+            ]);
+
+            let profileHtml = '';
+            if (profile) {
+                profileHtml = `
+                    <div style="margin-bottom:12px;">
+                        <div style="font-size:14px; font-weight:600;">${profile.name || symbol}</div>
+                        <div style="font-size:12px; color:var(--color-text-secondary);">
+                            ${profile.exchange || ''} · ${profile.country || ''} · ${profile.currency || ''}
+                        </div>
+                    </div>
+                `;
+            }
+
+            let quoteHtml = '';
+            if (quote) {
+                const isUp = quote.change >= 0;
+                quoteHtml = `
+                    <div style="margin-bottom:12px;">
+                        <div style="font-size:24px; font-weight:700;">
+                            $${quote.price.toFixed(2)}
+                            <span style="font-size:13px; margin-left:6px; color:${isUp ? '#22c55e' : '#ff6b6b'};">
+                                ${isUp ? '+' : ''}${quote.change.toFixed(2)} (${quote.percent >= 0 ? '+' : ''}${quote.percent.toFixed(2)}%)
+                            </span>
+                        </div>
+                        <div style="font-size:11px; color:var(--color-text-secondary);">
+                            O: ${quote.open?.toFixed ? quote.open.toFixed(2) : '-'} ·
+                            H: ${quote.high?.toFixed ? quote.high.toFixed(2) : '-'} ·
+                            L: ${quote.low?.toFixed ? quote.low.toFixed(2) : '-'} ·
+                            Prev: ${quote.prevClose?.toFixed ? quote.prevClose.toFixed(2) : '-'}
+                        </div>
+                    </div>
+                `;
+            }
+
+            let newsHtml = '';
+            if (news && news.length) {
+                newsHtml = `
+                    <div style="margin-top:8px;">
+                        <div style="font-size:11px; text-transform:uppercase; color:var(--color-text-secondary); margin-bottom:4px;">Recent News</div>
+                        ${news
+                            .map(
+                                n => `
+                            <div style="margin-bottom:8px;">
+                                <div style="font-size:12px; font-weight:600;">${n.headline}</div>
+                                <div style="font-size:11px; color:var(--color-text-secondary);">
+                                    ${n.source || ''} · ${n.datetime ? new Date(n.datetime * 1000).toLocaleString() : ''}
+                                </div>
+                            </div>
+                        `
+                            )
+                            .join('')}
+                    </div>
+                `;
+            } else {
+                newsHtml = `<div style="font-size:11px; color:var(--color-text-secondary); margin-top:8px;">No recent company news.</div>`;
+            }
+
+            body.innerHTML = profileHtml + quoteHtml + newsHtml;
         }
 
         function switchView(view) {
@@ -766,12 +984,20 @@
         }
 
         function handleSearch() {
-            // placeholder for later
+            // Placeholder
         }
 
         init();
         setInterval(refreshPrices, 30000);
+
+        document.addEventListener('click', e => {
+            const panel = document.getElementById('panel-details');
+            if (!panel) return;
+            if (panel.style.display === 'none') return;
+            if (!panel.contains(e.target)) {
+                panel.style.display = 'none';
+            }
+        });
     </script>
 </body>
 </html>
-
