--- a/index.html
+++ b/index.html
@@ -46,441 +46,4 @@
             background-color: var(--color-bg-secondary);
             border-right: 1px solid var(--color-border);
             padding: var(--space-16);
-            overflow-y: auto;
-            flex-shrink: 0;
-        }
-
-        .logo {
-            font-size: 18px;
-            font-weight: 700;
-            color: var(--color-primary);
-            margin-bottom: var(--space-24);
-            letter-spacing: 1px;
-        }
-
-        .nav-section {
-            margin-bottom: var(--space-24);
-        }
-
-        .nav-title {
-            font-size: 11px;
-            text-transform: uppercase;
-            color: var(--color-text-secondary);
-            font-weight: 600;
-            margin-bottom: var(--space-12);
-            letter-spacing: 0.5px;
-        }
-
-        .nav-item {
-            padding: var(--space-12) var(--space-8);
-            margin-bottom: var(--space-8);
-            border-radius: var(--radius-base);
-            cursor: pointer;
-            font-size: 13px;
-            transition: all 0.2s ease;
-            border-left: 3px solid transparent;
-        }
-
-        .nav-item:hover {
-            background-color: rgba(0, 168, 232, 0.1);
-            border-left-color: var(--color-primary);
-        }
-
-        .nav-item.active {
-            background-color: rgba(0, 168, 232, 0.15);
-            color: var(--color-primary);
-            border-left-color: var(--color-primary);
-        }
-
-        .main-content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .header {
-            background-color: var(--color-bg-secondary);
-            border-bottom: 1px solid var(--color-border);
-            padding: var(--space-16) var(--space-24);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .header h1 {
-            margin: 0;
-            font-size: 24px;
-            font-weight: 600;
-        }
-
-        .search-bar {
-            flex: 0 0 300px;
-            background-color: var(--color-surface);
-            border: 1px solid var(--color-border);
-            border-radius: var(--radius-base);
-            padding: var(--space-8) var(--space-12);
-            color: var(--color-text-primary);
-            font-size: 13px;
-        }
-
-        .search-bar::placeholder {
-            color: var(--color-text-secondary);
-        }
-
-        .search-bar:focus {
-            outline: none;
-            border-color: var(--color-primary);
-            box-shadow: 0 0 0 3px rgba(0, 168, 232, 0.1);
-        }
-
-        .content {
-            flex: 1;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: var(--space-16);
-            padding: var(--space-24);
-            overflow-y: auto;
-        }
-
-        .panel {
-            background-color: var(--color-surface);
-            border: 1px solid var(--color-border);
-            border-radius: var(--radius-base);
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .panel-header {
-            padding: var(--space-16);
-            border-bottom: 1px solid var(--color-border);
-            background-color: rgba(0, 0, 0, 0.2);
-        }
-
-        .panel-header h2 {
-            margin: 0;
-            font-size: 14px;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .panel-body {
-            padding: var(--space-16);
-            flex: 1;
-            overflow-y: auto;
-        }
-
-        .ticker-card {
-            padding: var(--space-12);
-            margin-bottom: var(--space-12);
-            background-color: rgba(0, 0, 0, 0.3);
-            border-radius: var(--radius-base);
-            border: 1px solid var(--color-border);
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-
-        .ticker-card:hover {
-            background-color: rgba(0, 168, 232, 0.1);
-            border-color: var(--color-primary);
-        }
-
-        .ticker-header {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: var(--space-8);
-        }
-
-        .ticker-symbol {
-            font-weight: 700;
-            font-size: 14px;
-            color: var(--color-text-primary);
-        }
-
-        .ticker-price {
-            font-size: 14px;
-            font-weight: 600;
-        }
-
-        .ticker-price.up {
-            color: var(--color-success);
-        }
-
-        .ticker-price.down {
-            color: var(--color-error);
-        }
-
-        .ticker-change {
-            display: flex;
-            justify-content: space-between;
-            font-size: 12px;
-        }
-
-        .change-value {
-            font-weight: 500;
-        }
-
-        .change-value.up {
-            color: var(--color-success);
-        }
-
-        .change-value.down {
-            color: var(--color-error);
-        }
-
-        .change-percent {
-            color: var(--color-text-secondary);
-        }
-
-        .news-item {
-            padding: var(--space-12);
-            margin-bottom: var(--space-12);
-            border-left: 3px solid var(--color-primary);
-            background-color: rgba(0, 168, 232, 0.05);
-            border-radius: var(--radius-base);
-        }
-
-        .news-title {
-            font-size: 13px;
-            font-weight: 600;
-            margin-bottom: var(--space-8);
-            line-height: 1.4;
-        }
-
-        .news-meta {
-            display: flex;
-            justify-content: space-between;
-            font-size: 11px;
-            color: var(--color-text-secondary);
-        }
-
-        .news-ticker {
-            display: inline-block;
-            background-color: var(--color-primary);
-            color: var(--color-bg-primary);
-            padding: 2px 6px;
-            border-radius: 3px;
-            font-weight: 600;
-            margin-right: var(--space-8);
-        }
-
-        .market-overview {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: var(--space-12);
-            margin-bottom: var(--space-12);
-        }
-
-        .metric-box {
-            background-color: rgba(0, 0, 0, 0.3);
-            padding: var(--space-12);
-            border-radius: var(--radius-base);
-            border: 1px solid var(--color-border);
-        }
-
-        .metric-label {
-            font-size: 11px;
-            color: var(--color-text-secondary);
-            text-transform: uppercase;
-            font-weight: 600;
-            margin-bottom: var(--space-4);
-            letter-spacing: 0.5px;
-        }
-
-        .metric-value {
-            font-size: 18px;
-            font-weight: 700;
-        }
-
-        .metric-change {
-            font-size: 12px;
-            margin-top: var(--space-4);
-        }
-
-        .metric-change.up {
-            color: var(--color-success);
-        }
-
-        .metric-change.down {
-            color: var(--color-error);
-        }
-
-        .sector-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: var(--space-8);
-        }
-
-        .sector-item {
-            padding: var(--space-12);
-            background-color: rgba(0, 0, 0, 0.3);
-            border-radius: var(--radius-base);
-            border: 1px solid var(--color-border);
-            text-align: center;
-        }
-
-        .sector-name {
-            font-size: 12px;
-            color: var(--color-text-secondary);
-            margin-bottom: var(--space-4);
-        }
-
-        .sector-change {
-            font-size: 14px;
-            font-weight: 700;
-        }
-
-        .sector-change.up {
-            color: var(--color-success);
-        }
-
-        .sector-change.down {
-            color: var(--color-error);
-        }
-
-        .input-group {
-            display: flex;
-            gap: var(--space-8);
-            margin-bottom: var(--space-16);
-        }
-
-        .input {
-            flex: 1;
-            background-color: var(--color-bg-primary);
-            border: 1px solid var(--color-border);
-            border-radius: var(--radius-base);
-            padding: var(--space-8) var(--space-12);
-            color: var(--color-text-primary);
-            font-size: 13px;
-        }
-
-        .input::placeholder {
-            color: var(--color-text-secondary);
-        }
-
-        .input:focus {
-            outline: none;
-            border-color: var(--color-primary);
-            box-shadow: 0 0 0 2px rgba(0, 168, 232, 0.1);
-        }
-
-        .btn {
-            background-color: var(--color-primary);
-            color: var(--color-bg-primary);
-            border: none;
-            padding: var(--space-8) var(--space-16);
-            border-radius: var(--radius-base);
-            font-weight: 600;
-            font-size: 13px;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .btn:hover {
-            background-color: #0096c7;
-        }
-
-        .btn-danger {
-            background-color: transparent;
-            color: var(--color-error);
-            border: 1px solid var(--color-error);
-            padding: 4px 8px;
-            font-size: 11px;
-        }
-
-        .btn-danger:hover {
-            background-color: rgba(255, 107, 107, 0.1);
-        }
-
-        .empty-state {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 200px;
-            color: var(--color-text-secondary);
-            text-align: center;
-        }
-
-        .empty-state-icon {
-            font-size: 32px;
-            margin-bottom: var(--space-12);
-            opacity: 0.5;
-        }
-
-        .sparkline {
-            width: 80px;
-            height: 24px;
-        }
-
-        .ticker-right {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .alert-row {
-            background-color: rgba(251, 191, 36, 0.08);
-            border-color: rgba(251, 191, 36, 0.5);
-        }
-
-        .alert-badge {
-            font-size: 10px;
-            text-transform: uppercase;
-            padding: 2px 6px;
-            border-radius: 999px;
-            background-color: rgba(251, 191, 36, 0.2);
-            color: var(--color-warning);
-            font-weight: 600;
-        }
-
-        ::-webkit-scrollbar {
-            width: 8px;
-            height: 8px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: transparent;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 4px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: rgba(255, 255, 255, 0.2);
-        }
-
-        @media (max-width: 1400px) {
-            .content {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .sidebar {
-                display: none;
-            }
-
-            .header {
-                flex-direction: column;
-                gap: var(--space-12);
-            }
-
-            .search-bar {
-                flex: 1;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="app-container">
-        <div class="sidebar">
-            <div class="logo">BBGTERMINAL</div>
-            <div class="nav-secti
+            over
